--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
 name: build
 on:
-  workflow_dispatch:
-#  push:
-#    paths-ignore:
-#      - 'README.md'
-#    tags:
-#      - '**'
+  push:
+    paths-ignore:
+      - 'README.md'
+    tags:
+      - '**'
 
 jobs:
   buildx:
