--- a/.github/workflows/check_trilium.yml
+++ b/.github/workflows/check_trilium.yml
@@ -1,7 +1,8 @@
 name: Check trilium version
 on: 
-  schedule:
-    - cron: '0 4 * * 6'
+  workflow_dispatch:
+#  schedule:
+#    - cron: '0 4 * * 6'
 
 jobs:
   updatetrilium:
