--- a/.github/workflows/check_trilium.yml
+++ b/.github/workflows/check_trilium.yml
@@ -1,8 +1,7 @@
 name: Check trilium version
-on: 
-  workflow_dispatch:
-#  schedule:
-#    - cron: '0 4 * * 6'
+on:
+  schedule:
+    - cron: '0 4 * * 6'
 
 jobs:
   updatetrilium:
